plugins {
    id 'de.dfki.mary.component'
}
apply from: "$rootDir/publishLogic.gradle"

sourceCompatibility = 1.8

marytts {
    component {
        name = 'Italian'
        packageName = 'marytts.language.it'
        configBaseClass = 'LanguageConfig'
        config from: 'component.yaml'
    }
}

dependencies {
    implementation project(':marytts-runtime')
    runtimeOnly group: 'de.dfki.mary', name: 'marytts-lexicon-it', version: '0.1.0'
    integrationTestImplementation project(':marytts-runtime').sourceSets.test.output
}

task generateComponentXmlDescriptor(type: GenerateComponentXmlDescriptor)

rootProject.distributions.main.contents {
    from generateComponentXmlDescriptor, {
        into 'installed'
    }
}
